Do not use deprecated Class.newInstance() any more
Signed-off-by: Sven Strickroth <email@cs-ware.de>